[package]
name = "orbgame-api"
version = "0.1.0"
authors = ["Florian Blasius <flovanpt@posteo.de>"]
description = "API crate that provides additional base api and elements for OrbGame."
repository = "https://gitlab.redox-os.org/redox-os/orbgame"
license = "MIT"
keywords = ["games", "api"]
edition = "2018"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
orbclient = "0.3.22"

[dependencies]
orbgame-utils = { version = "0.1.0", path = "../utils" }