[package]
name = "orbgame-widgets"
version = "0.1.0"
authors = ["Florian Blasius <flovanpt@posteo.de>"]
description = "Additional game widget library for OrbGame."
repository = "https://gitlab.redox-os.org/redox-os/orbgame"
license = "MIT"
keywords = ["games", "widgets"]
edition = "2018"

[dependencies]
orbgame-api = { version = "0.1.0", path = "../api" }
orbgame-utils = { version = "0.1.0", path = "../utils" }